chore: news from twitter